프리온보딩 디렉토리 정리